src/Components/Modals/EvidenceModal.module.scss
@import "../../Assets/Styles/variables";

.evidenceModal {
  .evidenceContainer {
    width: 1200px;
    height: 80%;
    overflow-y: hidden;
    padding: $l $l 0;
    top: 70px;
    transform: translate(-50%);
  }
  .top {
    height: 100%;
    max-height: 100%;
    overflow: hidden;
    display: grid;
    grid-template-rows: auto auto auto 1fr;
  }
  .tabs {
    overflow-y: hidden;
    display: grid;
    align-content: flex-start;
  }
  .tab {
    display: grid;
    grid-template-rows: auto 1fr;
    overflow-y: auto;
  }
  .tableBody {
    box-shadow: $dropShadow;
    font-size: $bodyTwoSize;
    border-radius: $defaultBorderRadius;
    margin: 0 10px 10px;
    display: flex;
    flex-direction: column;
    overflow-y: hidden;
    .tableItems {
      display: flex;
      flex-direction: column;
      overflow-y: auto;
      scrollbar-width: thin;
      scrollbar-color: $midGray $lightGray;
      &::-webkit-scrollbar {
        width: 10px;
      }

      &::-webkit-scrollbar-track {
        background-color: $lightGray;
      }

      &::-webkit-scrollbar-thumb {
        background-color: $midGray;
        border-radius: 10px;
      }

      &::-webkit-scrollbar-thumb:hover {
        background-color: $darkGray;
      }
    }
    &.clinicalTrials {
      .tableHead, .evidenceItem {
        display: grid;
        grid-template-columns: 1fr;
      }
    }
    &.misc {
      .link svg {
        min-width: 20px;
        min-height: 20px;
      }
      .tableHead, .tableItem {
        display: grid;
        grid-template-columns: 1fr;
      }
    }
    &.sources {
      .tableHead, .tableItem {
        display: grid;
        grid-template-columns: 1.25fr 3.75fr;
      }
      .source, .link {
        text-align: center;
      }
      .source {
        display: flex;
        justify-content: center;
        align-items: center;
      }
      .tooltipSpan {
        margin: 0 2px;
        font-size: 12px;
        font-weight: bold;
        color: $white;
        display: inline-flex;
        align-items: center;
        svg {
          width: 16px;
          margin-top: 2px;
          margin-left: 4px;
          transform: none !important;
          path {
            fill: $white !important;
          }
        }
      }
    }
    &.distinctSources {
      .tableHead, .tableItem {
        display: grid;
        grid-template-columns: 1.25fr 3.75fr;
      }
      .source, .link {
        text-align: center;
      }
    }
    .relationship {
      text-align: center;
      &>span {
        text-align: center;
      }
      span {
        display: block;
      }
    }
    .link a {
      justify-content: center;
    }
  }
  .pValueTable, .otherTable {
    &>div {
      grid-template-columns: 1fr 1fr 2fr;
      height: 60px;
      .cell {
        height: auto;
      }
    }
  }
  .noEvidence {
    padding: 50px 0;
    width: 100%;
    text-align: center;
  }
  .subtitle {
    font-size: 14px;
    font-weight: 400;
    color: $black;
    margin-bottom: 0;
  }
  .title {
    margin-bottom: 0;
    font-weight: 800;
  }
  .evidenceCount {
    margin-bottom: $m;
  }
  .inferredDisclaimer {
    text-align: center;
    display: grid;
    align-content: center;
    padding: 0 $l;
  }
}
.pathViewContainer {
  background-color: $palePurple;
  border-radius: $largeBorderRadius;
  border: 1px solid $lightPurpleTwo;
  margin: $s auto 0;
  width: calc(100% - 2px);
  overflow: auto hidden;
  transition: all .4s ease;
  position: relative;
  max-height: 100%;
  display: grid;
  align-content: center;
  .togglePathView {
    position: fixed;
    top: 104px;
    right: 37px;
    margin: 0;
    padding: 7px 8px;
    z-index: 100;
    font-size: 12px;
    color: $black;
    box-shadow: $dropShadow;
    transition: $defaultAnim;
    svg {
      width: 18px;
      height: 18px;
      path {
        stroke: $black;
      }
    }
    &:hover {
      box-shadow: $dropShadowHover;
      background-color: $grayHover;
      border-color: $grayHover;
    }
  }
  &.minimized {
    max-height: 64px;
    .togglePathView svg {
      transform: rotate(180deg);
    }
  }
}
.pathView {
  display: grid;
  grid-template-columns: repeat(7, minmax(0, 1fr));
  gap: 5px;
  max-width: calc(100% - $l);
  align-items: center;
  margin: 0 auto;
  padding: $s;
  position: relative;
  .pathContainer, .nameContainer, .targetContainer {
    cursor: pointer;
    &>span {
      padding: 4px 8px 4px 4px;
      min-height: 22px;
      width: 136px;
    }
  }
  .nameContainer {
    &:last-child {
      border-right-width: 13px;
      border-bottom-right-radius: $defaultBorderRadius;
      border-top-right-radius: $defaultBorderRadius;
      div:first-child {
        clip-path: polygon(100% -50.00%, 100% 50%, 100% 150%, 0% 150%, 5% 50%, 0% -50%);
        &:after {
          clip-path: none;
          opacity: 0;
        }
      }
      .nameInterior {
        background-color: $lightGray;
        border: 1px solid $lightGray;
        border-bottom-right-radius: $defaultBorderRadius;
        border-top-right-radius: $defaultBorderRadius;
        height: 16px;
        margin-right: -5px;
      }
    }
  }
}

.groupedPreds {
  font-weight: 500;
  &>span {
    margin-bottom: 10px;
  }
  &>span:last-child {
    margin-bottom: 0;
  }
  .pathContainer {
    &>svg {
      height: 27px;
    }
    &:first-of-type {
      &>svg {
        top: 80%;
        height: auto;
      }
    }
    &:last-of-type {
      &>svg {
        top: 28%;
        height: auto;
      }
    }
  }
  &.hasTwo {
    span:first-child {
      svg {
        top: 65% !important;
        &:first-of-type {
          transform: translateY(-50%) rotate(-15deg);
        }
        &:last-of-type {
          transform: translateY(-50%) rotate(15deg);
        }
      }
    }
    span:last-child {
      svg {
        top: 45% !important;
        &:first-of-type {
          transform: translateY(-50%) rotate(15deg);
        }
        &:last-of-type {
          transform: translateY(-50%) rotate(-15deg);
        }
      }
    }
  }
}

.infoIcon {
  margin-left: 4px;
}

